[tool.poetry]
name = "chess-game"
version = "0.1.0"
description = ""
authors = ["Nate Hawley"]

[tool.poetry.dependencies]
python = "3.8.2"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
